New version of gradient descent for Exp9, way faster.

--- a/Exp9.ipynb
+++ b/Exp9.ipynb
@@ -20,30 +20,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 50
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "Psi = genfromtxt('asterix/psi.mat')\n",
-      "A = genfromtxt('asterix/actions.mat')\n",
-      "A = A.reshape((len(A),1))\n",
-      "ACTION_SPACE = range(0,18)\n",
-      "Psi.shape,A.shape"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 51,
-       "text": [
-        "((325, 1000), (325, 1))"
-       ]
-      }
-     ],
-     "prompt_number": 51
+     "prompt_number": 112
     },
     {
      "cell_type": "code",
@@ -113,39 +90,36 @@
       "    def alpha(self, t):\n",
       "        return 3./(t+1)#Sensible default\n",
       "    \n",
-      "    def __init__(self, data, x_dim, phi, phi_dim, Y):\n",
-      "        self.x_dim=x_dim\n",
-      "        self.inputs = data[:,:-1]\n",
-      "        shape = list(data.shape)\n",
-      "        shape[-1] = 1\n",
-      "        self.labels = data[:,-1].reshape(shape)\n",
-      "        self.phi=phi\n",
-      "        self.label_set = Y\n",
-      "        self.theta_0 = zeros((phi_dim,1))\n",
-      "        self.phi_xy = self.phi(data)\n",
-      "        for x,y in zip(self.inputs,self.labels):\n",
-      "            self.dic_data[str(x)] = y\n",
-      "        print self.inputs.shape\n",
-      "    \n",
-      "    def structure(self, xy):\n",
-      "        return 0. if xy[-1] == self.dic_data[str(xy[:-1])] else 1.\n",
-      "        \n",
-      "    def structured_decision(self, theta):\n",
-      "        def decision( x ):\n",
-      "            score = lambda xy: dot(theta.transpose(),self.phi(xy)) + self.structure(xy)\n",
-      "            input_label_couples = [hstack([x,y]) for y in self.label_set]\n",
-      "            best_label = argmax(input_label_couples, score)[-1]\n",
-      "            return best_label\n",
-      "        vdecision = non_scalar_vectorize(decision, (self.x_dim,), (1,1))\n",
-      "        return lambda x: vdecision(x).reshape(x.shape[:-1]+(1,))\n",
+      "    def __init__(self, psi, actions, nb_actions):\n",
+      "        self.N,self.K = psi.shape\n",
+      "        self.A = nb_actions\n",
+      "        self.theta_0 = zeros(self.K*self.A)\n",
+      "        self.ExpertDecision = zeros((self.N,self.A))\n",
+      "        for i,j in zip( range(0,self.N), actions.reshape(self.N) ):\n",
+      "            self.ExpertDecision[i,j] = 1.\n",
+      "        self.Structure = array(self.ExpertDecision!=1)\n",
+      "        self.ExpertDecision = self.ExpertDecision.reshape(self.N,self.A,1)\n",
+      "        self.Psi_3 = array([[p for i in range(0,self.A)] for p in psi])\n",
+      "        self.Phi = self.ExpertDecision*self.Psi_3\n",
+      "        self.Phi = self.Phi.reshape(self.N,self.K*self.A)\n",
+      "        self.Psi = psi\n",
       "    \n",
       "    def gradient(self, theta):\n",
-      "        classif_rule = self.structured_decision(theta)\n",
-      "        y_star = classif_rule(self.inputs)\n",
-      "        #print \"Gradient : \"+str(y_star)\n",
-      "        #print str(self.labels)\n",
-      "        phi_star = self.phi(hstack([self.inputs,y_star]))\n",
-      "        return mean(phi_star-self.phi_xy,axis=0)\n",
+      "        theta_2 = hstack([theta[i*self.K:(i+1)*self.K].reshape((self.K,1)) for i in range(0,self.A)])\n",
+      "        score = dot(self.Psi,theta_2)+self.Structure\n",
+      "        maxScore = dot(score.max(axis=1).reshape((self.N,1)),ones((1,self.A)))\n",
+      "        decision = (score==maxScore).reshape(self.N,self.A,1)\n",
+      "        #We restrict ourselves to one arbitrary decision\n",
+      "        for i in range(0,self.N):\n",
+      "            gotOne = False\n",
+      "            for j in range(0,self.A):\n",
+      "                if decision[i,j] and not gotOne:\n",
+      "                    gotOne = True\n",
+      "                elif decision[i,j] and gotOne:\n",
+      "                    decision[i,j] = False\n",
+      "        phi_star = decision*self.Psi_3\n",
+      "        phi_star = phi_star.reshape(self.N,self.K*self.A)\n",
+      "        return mean(phi_star-self.Phi,axis=0)\n",
       "    \n",
       "    def run(self):\n",
       "        f_grad = lambda theta: self.gradient(theta)\n",
@@ -156,22 +130,37 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 116
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Psi = genfromtxt('asterix/psi.mat')\n",
+      "A = genfromtxt('asterix/actions.mat')\n",
+      "A = A.reshape((len(A),1))\n",
+      "ACTION_SPACE = range(0,18)\n",
+      "Psi.shape,A.shape"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 114,
+       "text": [
+        "((325, 1000), (325, 1))"
+       ]
+      }
+     ],
+     "prompt_number": 114
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "#Running the classifier gives pi_c and q\n",
-      "def asterix_single_phi(psi_a):\n",
-      "    psi = psi_a[:1000]\n",
-      "    a = psi_a[-1]\n",
-      "    answer = zeros((18000,1))\n",
-      "    index = a*1000\n",
-      "    answer[index:index+1000,0] = psi\n",
-      "    return answer\n",
-      "asterix_phi = non_scalar_vectorize(asterix_single_phi, (1001,), (18000,1))\n",
-      "clf = StructuredClassifier(hstack([Psi,A]), 1000, asterix_phi, 18000, ACTION_SPACE)\n",
+      "clf = StructuredClassifier(Psi, A, 18)\n",
       "pi_c,theta_C = clf.run()\n",
       "q = lambda sa: squeeze(dot(theta_C.transpose(),asterix_phi(sa)))\n",
       "savetxt(\"CSI_asterix_theta_C.mat\", theta_C)"
@@ -183,8 +172,8 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "(1047, 1000)\n",
-        "Norme du gradient : 27.9556519663, pas : 1.5, iteration : 1"
+        "Norme du gradient : 24.5704096822, pas : 1.5, iteration : 1\n",
+        "Norme du gradient : 12.5215890252, pas : 1.0, iteration : 2"
        ]
       },
       {
@@ -192,11 +181,243 @@
        "stream": "stdout",
        "text": [
         "\n",
-        "Gradient de norme : 27.9556519663, a l'iteration : 1\n"
+        "Norme du gradient : 13.7506793807, pas : 0.75, iteration : 3"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 8.5642183932, pas : 0.6, iteration : 4"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 7.51692370667, pas : 0.5, iteration : 5"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 8.65101970937, pas : 0.428571428571, iteration : 6"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 7.32577325926, pas : 0.375, iteration : 7"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 6.31295540275, pas : 0.333333333333, iteration : 8"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 2.87877028316, pas : 0.3, iteration : 9"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 4.13831169303, pas : 0.272727272727, iteration : 10"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 1.71169869604, pas : 0.25, iteration : 11"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 3.31129249511, pas : 0.230769230769, iteration : 12"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 1.82454533527, pas : 0.214285714286, iteration : 13"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.788761293864, pas : 0.2, iteration : 14"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 4.88425268187, pas : 0.1875, iteration : 15"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.834078877544, pas : 0.176470588235, iteration : 16"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 1.20362371993, pas : 0.166666666667, iteration : 17"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.946192619593, pas : 0.157894736842, iteration : 18"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.635323148452, pas : 0.15, iteration : 19"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 1.73997755546, pas : 0.142857142857, iteration : 20"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.971294506188, pas : 0.136363636364, iteration : 21"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.424102254054, pas : 0.130434782609, iteration : 22"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.606411503224, pas : 0.125, iteration : 23"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.632694996487, pas : 0.12, iteration : 24"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.695411844259, pas : 0.115384615385, iteration : 25"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.402947718576, pas : 0.111111111111, iteration : 26"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.396935002802, pas : 0.107142857143, iteration : 27"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.462153436444, pas : 0.103448275862, iteration : 28"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.751588455939, pas : 0.1, iteration : 29"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.276101344913, pas : 0.0967741935484, iteration : 30"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Norme du gradient : 0.0, pas : 0.09375, iteration : 31"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Gradient de norme : 0.0, a l'iteration : 31\n"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 117
     },
     {
      "cell_type": "code",
