--- a/Exp9.ipynb
+++ b/Exp9.ipynb
@@ -20,25 +20,26 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 112
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "#Classification code\n",
-      "def greedy_policy( omega, phi, A ): \n",
-      "    def policy( *args ):\n",
-      "        state_actions = [hstack(args+(a,)) for a in A]\n",
-      "        q_value = lambda sa: float(dot(omega.transpose(),phi(sa)))\n",
-      "        best_action = argmax( state_actions, q_value )[-1] #FIXME6: does not work for multi dimensional actions\n",
-      "        return best_action\n",
-      "    vpolicy = non_scalar_vectorize( policy, (1000,), (1,1) ) #FIXME, the 1000 here is s_dim and is problem-dependant\n",
-      "    return lambda state: vpolicy(state).reshape(state.shape[:-1]+(1,))\n",
+      "def asterix_single_phi(psi_a):\n",
+      "    psi = psi_a[:1000]\n",
+      "    a = psi_a[-1]\n",
+      "    answer = zeros((18000,1))\n",
+      "    index = a*1000\n",
+      "    answer[index:index+1000,0] = psi\n",
+      "    return answer\n",
+      "asterix_phi = non_scalar_vectorize(asterix_single_phi, (1001,), (18000,1))\n",
+      "\n",
+      "\n",
       "\n",
       "#Structured Classifier\n",
       "class GradientDescent(object):\n",
-      "    \n",
       "   def alpha( self, t ):\n",
       "      raise NotImplementedError, \"Cannot call abstract method\"\n",
       "\n",
@@ -79,18 +80,14 @@
       "    sign=-1.\n",
       "    Threshold=0.1 #Sensible default\n",
       "    T=40 #Sensible default\n",
-      "    phi=None\n",
-      "    phi_xy=None\n",
-      "    inputs=None\n",
-      "    labels=None\n",
+      "    phi=asterix_phi\n",
       "    label_set=None\n",
-      "    dic_data={}\n",
-      "    x_dim=None\n",
       "    \n",
       "    def alpha(self, t):\n",
       "        return 3./(t+1)#Sensible default\n",
       "    \n",
       "    def __init__(self, psi, actions, nb_actions):\n",
+      "        self.label_set=range(0,nb_actions)\n",
       "        self.N,self.K = psi.shape\n",
       "        self.A = nb_actions\n",
       "        self.theta_0 = zeros(self.K*self.A)\n",
@@ -124,13 +121,12 @@
       "    def run(self):\n",
       "        f_grad = lambda theta: self.gradient(theta)\n",
       "        theta = super(StructuredClassifier,self).run( f_grad, b_norm=True)\n",
-      "        classif_rule = greedy_policy(theta,self.phi,self.label_set)\n",
-      "        return classif_rule,theta\n"
+      "        return theta\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 116
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -147,13 +143,13 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 114,
+       "prompt_number": 3,
        "text": [
         "((325, 1000), (325, 1))"
        ]
       }
      ],
-     "prompt_number": 114
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -161,7 +157,7 @@
      "input": [
       "#Running the classifier gives pi_c and q\n",
       "clf = StructuredClassifier(Psi, A, 18)\n",
-      "pi_c,theta_C = clf.run()\n",
+      "theta_C = clf.run()\n",
       "q = lambda sa: squeeze(dot(theta_C.transpose(),asterix_phi(sa)))\n",
       "savetxt(\"CSI_asterix_theta_C.mat\", theta_C)"
      ],
@@ -409,6 +405,17 @@
        ]
       },
       {
+       "ename": "IndexError",
+       "evalue": "tuple index out of range",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-4-2441d9c87ba9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mtheta_C\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mlambda\u001b[0m \u001b[0msa\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0msqueeze\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtheta_C\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0masterix_phi\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msa\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0msavetxt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"CSI_asterix_theta_C.mat\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtheta_C\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m/usr/lib64/python2.7/site-packages/numpy/lib/npyio.pyc\u001b[0m in \u001b[0;36msavetxt\u001b[1;34m(fname, X, fmt, delimiter, newline)\u001b[0m\n\u001b[0;32m    974\u001b[0m                 \u001b[0mncol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdescr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    975\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 976\u001b[1;33m             \u001b[0mncol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    977\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    978\u001b[0m         \u001b[0miscomplex_X\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miscomplexobj\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+        "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
+       ]
+      },
+      {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
@@ -417,7 +424,18 @@
        ]
       }
      ],
-     "prompt_number": 117
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "theta_C"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -429,7 +447,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 38
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -442,7 +460,20 @@
       "a = A[:-1].reshape(column_shape)\n",
       "sa = hstack([s,a])\n",
       "s_dash = Psi[1:,:]\n",
-      "a_dash = pi_c(s_dash).reshape(column_shape)\n",
+      "a_dash = -ones(column_shape)\n",
+      "#a_dash = pi_c(s_dash).reshape(column_shape)\n",
+      "theta_2 = hstack([theta_C[i*1000:(i+1)*1000].reshape((1000,1)) for i in range(0,18)])\n",
+      "score = dot(s_dash,theta_2)\n",
+      "maxScore = dot(score.max(axis=1).reshape((len(Psi)-1,1)),ones((1,18)))\n",
+      "decision = (score==maxScore).reshape(len(Psi)-1,18,1)\n",
+      "for i in range(0,len(Psi)-1):\n",
+      "    gotOne = False\n",
+      "    for j in range(0,18):\n",
+      "        if decision[i,j] and not gotOne:\n",
+      "            gotOne = True\n",
+      "            a_dash[i] = j\n",
+      "        elif decision[i,j] and gotOne:\n",
+      "            decision[i,j] = False\n",
       "sa_dash = hstack([s_dash,a_dash])\n",
       "hat_r = (q(sa)-GAMMA*q(sa_dash)).reshape(column_shape)\n",
       "r_min = min(hat_r)-1.*ones(column_shape)"
@@ -450,7 +481,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 41
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -462,13 +493,16 @@
       "    hat_r_bool_table = array(a==action)\n",
       "    r_min_bool_table = array(hat_r_bool_table==False) #\"not hat_r_bool_table\" does not work as I expected\n",
       "    Y =  hat_r_bool_table*hat_r + r_min_bool_table*r_min\n",
-      "    thetas[action] = squeeze( dot(dot(inv(dot(X.transpose(),X)+0.1*identity(X.shape[1])),X.transpose()),Y) )\n",
+      "    if sum(hat_r_bool_table) == 0:\n",
+      "        thetas[action] = zeros(1000)\n",
+      "    else:\n",
+      "        thetas[action] = squeeze( dot(dot(inv(dot(X.transpose(),X)+0.1*identity(X.shape[1])),X.transpose()),Y) )\n",
       "    "
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 46
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -478,8 +512,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 49
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 26,
+       "text": [
+        "0.12360699467094478"
+       ]
+      }
+     ],
+     "prompt_number": 26
     }
    ],
    "metadata": {}
