Reward vector on the highway

--- a/Highway.ipynb
+++ b/Highway.ipynb
@@ -96,6 +96,35 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def R( ):\n",
+      "    reward = zeros((3*9*9*3,1))\n",
+      "    for state in S:\n",
+      "        current_index = s_index( state )\n",
+      "        v = state[0]\n",
+      "        xb = state[1]\n",
+      "        yr = state[2]\n",
+      "        xr = state[3]\n",
+      "        lane_nb2blue_x = [[1,2,3],[3,4,5],[5,6,7]] #Coincidentally, lane_nb is xr\n",
+      "        if yr in [6,7,8] and xb in lane_nb2blue_x[xr] : #Collision\n",
+      "            reward[ current_index ] = -1.\n",
+      "        elif xb in [0,1,7,8]:\n",
+      "            reward[ current_index ] = -0.5\n",
+      "        elif v == 2:\n",
+      "            reward[ current_index ] = 1.\n",
+      "        else:\n",
+      "            pass #already at 0\n",
+      "    return reward\n",
+      "savetxt(\"Highway_R.mat\", R())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
     }
    ],
    "metadata": {}
