Correcting a matrix dimension misshap on the highway

--- a/Highway.ipynb
+++ b/Highway.ipynb
@@ -31,12 +31,7 @@
       "    return index\n",
       "\n",
       "def sa_index( state, action ):\n",
-      "    v = state[0]\n",
-      "    x_b = state[1]\n",
-      "    y_r = state[2]\n",
-      "    x_r = state[3]\n",
-      "    a = action\n",
-      "    index = x_r + y_r*3 + x_b*3*9 + v*3*9*9 + a*3*9*9*3\n",
+      "    index = s_index(state) + a*3*9*9*3\n",
       "    return index\n",
       "\n",
       "def next_states( state, action ):\n",
@@ -89,33 +84,33 @@
       "            P_a[ current_index, next_index ] = 1./len(possible_outcomes) #This line assumes two outcome won't share the same index\n",
       "    return P_a\n",
       "\n",
-      "P = hstack([P(a) for a in A])\n",
+      "P = vstack([P(a) for a in A])\n",
       "savetxt(\"Highway_P.mat\",P)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "def R( ):\n",
-      "    reward = zeros((3*9*9*3,1))\n",
+      "    reward = zeros((3*9*9*3*5,1))\n",
       "    for state in S:\n",
-      "        current_index = s_index( state )\n",
+      "        current_indices = [sa_index(state,a) for a in A]\n",
       "        v = state[0]\n",
       "        xb = state[1]\n",
       "        yr = state[2]\n",
       "        xr = state[3]\n",
       "        lane_nb2blue_x = [[1,2,3],[3,4,5],[5,6,7]] #Coincidentally, lane_nb is xr\n",
       "        if yr in [6,7,8] and xb in lane_nb2blue_x[xr] : #Collision\n",
-      "            reward[ current_index ] = -1.\n",
+      "            reward[ current_indices ] = -1.\n",
       "        elif xb in [0,1,7,8]:\n",
-      "            reward[ current_index ] = -0.5\n",
+      "            reward[ current_indices ] = -0.5\n",
       "        elif v == 2:\n",
-      "            reward[ current_index ] = 1.\n",
+      "            reward[ current_indices ] = 1.\n",
       "        else:\n",
       "            pass #already at 0\n",
       "    return reward\n",
@@ -124,7 +119,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 12
     }
    ],
    "metadata": {}
