Another go at implementing Relative Entropy

--- a/Exp10.ipynb
+++ b/Exp10.ipynb
@@ -121,6 +121,80 @@
       }
      ],
      "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Relative Entropy\n",
+      "class GradientDescent(object):\n",
+      "   def alpha( self, t ):\n",
+      "      raise NotImplementedError, \"Cannot call abstract method\"\n",
+      "\n",
+      "   theta_0=None\n",
+      "   Threshold=None\n",
+      "   T = -1\n",
+      "   sign = None\n",
+      "        \n",
+      "   def run( self, f_grad, f_proj=None, b_norm=False ): #grad is a function of theta\n",
+      "      theta = self.theta_0.copy()\n",
+      "      best_theta = theta.copy()\n",
+      "      best_norm = float(\"inf\")\n",
+      "      best_iter = 0\n",
+      "      t=0\n",
+      "      while True:#Do...while loop\n",
+      "         t+=1\n",
+      "         DeltaTheta = f_grad( theta )\n",
+      "         current_norm = norm( DeltaTheta )\n",
+      "         if b_norm and  current_norm > 0.:\n",
+      "             DeltaTheta /= norm( DeltaTheta )\n",
+      "         theta = theta + self.sign * self.alpha( t )*DeltaTheta\n",
+      "         if f_proj:\n",
+      "             theta = f_proj( theta )\n",
+      "         print \"Norme du gradient : \"+str(current_norm)+\", pas : \"+str(self.alpha(t))+\", iteration : \"+str(t)\n",
+      "\n",
+      "         if current_norm < best_norm:\n",
+      "             best_norm = current_norm\n",
+      "             best_theta = theta.copy()\n",
+      "             best_iter = t\n",
+      "         if current_norm < self.Threshold or (self.T != -1 and t >= self.T):\n",
+      "             break\n",
+      "\n",
+      "      print \"Gradient de norme : \"+str(best_norm)+\", a l'iteration : \"+str(best_iter)\n",
+      "      return best_theta\n",
+      "                            \n",
+      "class RelativeEntropy(GradientDescent):\n",
+      "    sign=-1.\n",
+      "    Threshold=0.1 #Sensible default\n",
+      "    T=100 #Sensible default\n",
+      "    Epsilon = 0.01 #RelEnt parameter, sensible default\n",
+      "    \n",
+      "    def alpha(self, t):\n",
+      "        return 3./(t+1)#Sensible default\n",
+      "    \n",
+      "    def __init__(self, mu_E, mus):\n",
+      "        self.Mu_E = mu_E\n",
+      "        self.Mus = mus\n",
+      "    \n",
+      "    def gradient(self, theta):\n",
+      "        numerator = 0\n",
+      "        denominator = 0\n",
+      "        for mu in self.Mus:\n",
+      "            c = exp(dot(theta,mu))\n",
+      "            numerator += c*mu\n",
+      "            denominator += c\n",
+      "        assert denominator != 0,\"A sum of exp(...) is null, some black magic happened here.\"\n",
+      "        return self.Mu_E - numerator/denominator - sign(theta)*self.Epsilon\n",
+      "    \n",
+      "    def run(self):\n",
+      "        f_grad = lambda theta: self.gradient(theta)\n",
+      "        theta = super(StructuredClassifier,self).run( f_grad, b_norm=True)\n",
+      "        return theta\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 26
     }
    ],
    "metadata": {}
