We now have some trajectories on the highway

--- a/Exp10.ipynb
+++ b/Exp10.ipynb
@@ -19,7 +19,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 19
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -31,14 +31,88 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Relative Entropy\n",
+      "class GradientDescent(object):\n",
+      "   def alpha( self, t ):\n",
+      "      raise NotImplementedError, \"Cannot call abstract method\"\n",
+      "\n",
+      "   theta_0=None\n",
+      "   Threshold=None\n",
+      "   T = -1\n",
+      "   sign = None\n",
+      "        \n",
+      "   def run( self, f_grad, f_proj=None, b_norm=False ): #grad is a function of theta\n",
+      "      theta = self.theta_0.copy()\n",
+      "      best_theta = theta.copy()\n",
+      "      best_norm = float(\"inf\")\n",
+      "      best_iter = 0\n",
+      "      t=0\n",
+      "      while True:#Do...while loop\n",
+      "         t+=1\n",
+      "         DeltaTheta = f_grad( theta )\n",
+      "         current_norm = norm( DeltaTheta )\n",
+      "         if b_norm and  current_norm > 0.:\n",
+      "             DeltaTheta /= norm( DeltaTheta )\n",
+      "         theta = theta + self.sign * self.alpha( t )*DeltaTheta\n",
+      "         if f_proj:\n",
+      "             theta = f_proj( theta )\n",
+      "         print \"Norme du gradient : \"+str(current_norm)+\", pas : \"+str(self.alpha(t))+\", iteration : \"+str(t)\n",
+      "\n",
+      "         if current_norm < best_norm:\n",
+      "             best_norm = current_norm\n",
+      "             best_theta = theta.copy()\n",
+      "             best_iter = t\n",
+      "         if current_norm < self.Threshold or (self.T != -1 and t >= self.T):\n",
+      "             break\n",
+      "\n",
+      "      print \"Gradient de norme : \"+str(best_norm)+\", a l'iteration : \"+str(best_iter)\n",
+      "      return best_theta\n",
+      "                            \n",
+      "class RelativeEntropy(GradientDescent):\n",
+      "    sign=-1.\n",
+      "    Threshold=0.1 #Sensible default\n",
+      "    T=100 #Sensible default\n",
+      "    Epsilon = 0.01 #RelEnt parameter, sensible default\n",
+      "    \n",
+      "    def alpha(self, t):\n",
+      "        return 3./(t+1)#Sensible default\n",
+      "    \n",
+      "    def __init__(self, mu_E, mus):\n",
+      "        self.Mu_E = mu_E\n",
+      "        self.Mus = mus\n",
+      "    \n",
+      "    def gradient(self, theta):\n",
+      "        numerator = 0\n",
+      "        denominator = 0\n",
+      "        for mu in self.Mus:\n",
+      "            c = exp(dot(theta,mu))\n",
+      "            numerator += c*mu\n",
+      "            denominator += c\n",
+      "        assert denominator != 0,\"A sum of exp(...) is null, some black magic happened here.\"\n",
+      "        return self.Mu_E - numerator/denominator - sign(theta)*self.Epsilon\n",
+      "    \n",
+      "    def run(self):\n",
+      "        f_grad = lambda theta: self.gradient(theta)\n",
+      "        theta = super(StructuredClassifier,self).run( f_grad, b_norm=True)\n",
+      "        return theta\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "Highway = MDP(P,R)\n",
-      "mPi_E, V_E, pi_E = Highway.optimal_policy()"
+      "mPi_E, V_E, Pi_E = Highway.optimal_policy()"
      ],
      "language": "python",
      "metadata": {},
@@ -120,81 +194,57 @@
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#Relative Entropy\n",
-      "class GradientDescent(object):\n",
-      "   def alpha( self, t ):\n",
-      "      raise NotImplementedError, \"Cannot call abstract method\"\n",
-      "\n",
-      "   theta_0=None\n",
-      "   Threshold=None\n",
-      "   T = -1\n",
-      "   sign = None\n",
-      "        \n",
-      "   def run( self, f_grad, f_proj=None, b_norm=False ): #grad is a function of theta\n",
-      "      theta = self.theta_0.copy()\n",
-      "      best_theta = theta.copy()\n",
-      "      best_norm = float(\"inf\")\n",
-      "      best_iter = 0\n",
-      "      t=0\n",
-      "      while True:#Do...while loop\n",
-      "         t+=1\n",
-      "         DeltaTheta = f_grad( theta )\n",
-      "         current_norm = norm( DeltaTheta )\n",
-      "         if b_norm and  current_norm > 0.:\n",
-      "             DeltaTheta /= norm( DeltaTheta )\n",
-      "         theta = theta + self.sign * self.alpha( t )*DeltaTheta\n",
-      "         if f_proj:\n",
-      "             theta = f_proj( theta )\n",
-      "         print \"Norme du gradient : \"+str(current_norm)+\", pas : \"+str(self.alpha(t))+\", iteration : \"+str(t)\n",
-      "\n",
-      "         if current_norm < best_norm:\n",
-      "             best_norm = current_norm\n",
-      "             best_theta = theta.copy()\n",
-      "             best_iter = t\n",
-      "         if current_norm < self.Threshold or (self.T != -1 and t >= self.T):\n",
-      "             break\n",
-      "\n",
-      "      print \"Gradient de norme : \"+str(best_norm)+\", a l'iteration : \"+str(best_iter)\n",
-      "      return best_theta\n",
-      "                            \n",
-      "class RelativeEntropy(GradientDescent):\n",
-      "    sign=-1.\n",
-      "    Threshold=0.1 #Sensible default\n",
-      "    T=100 #Sensible default\n",
-      "    Epsilon = 0.01 #RelEnt parameter, sensible default\n",
-      "    \n",
-      "    def alpha(self, t):\n",
-      "        return 3./(t+1)#Sensible default\n",
-      "    \n",
-      "    def __init__(self, mu_E, mus):\n",
-      "        self.Mu_E = mu_E\n",
-      "        self.Mus = mus\n",
-      "    \n",
-      "    def gradient(self, theta):\n",
-      "        numerator = 0\n",
-      "        denominator = 0\n",
-      "        for mu in self.Mus:\n",
-      "            c = exp(dot(theta,mu))\n",
-      "            numerator += c*mu\n",
-      "            denominator += c\n",
-      "        assert denominator != 0,\"A sum of exp(...) is null, some black magic happened here.\"\n",
-      "        return self.Mu_E - numerator/denominator - sign(theta)*self.Epsilon\n",
-      "    \n",
-      "    def run(self):\n",
-      "        f_grad = lambda theta: self.gradient(theta)\n",
-      "        theta = super(StructuredClassifier,self).run( f_grad, b_norm=True)\n",
-      "        return theta\n"
+      "rho = lambda : int(rand()*729) #uniform distribtion over S\n",
+      "D_E = Highway.D_func(Pi_E, 50, 100,  rho)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 26
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Mu_E = zeros((3645,1))\n",
+      "for sasr in D_E:\n",
+      "    s = sasr[0]\n",
+      "    Mu_E[s] += 1.\n",
+      "Mu_E /= float(len(D_E))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "random_policy = lambda s: int(rand()*5)\n",
+      "random_trajs = []\n",
+      "for i in range(0,50):\n",
+      "    D = Highway.D_func(random_policy, 1, 100, rho)\n",
+      "    random_trajs.append(D)\n",
+      "Mus = []\n",
+      "for D in random_trajs:\n",
+      "    mu = zeros((3645,1))\n",
+      "    for sasr in D:\n",
+      "        s = sasr[0]\n",
+      "        mu[s] += 1.\n",
+      "    mu /= float(len(D))\n",
+      "    Mus.append(mu)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 12
     }
    ],
    "metadata": {}
